[package]
name = "pestast_derive"
description = "pestast's derive macro"
version = "0.2.0"
edition = "2021"
authors = ["Marc Fischer <marcfir@proton.me>"]
license = "MIT OR Apache-2.0"
keywords = ["pest", "parser", "ast", "grammar"]
categories = ["parsing"]
repository = "https://github.com/marcfir/pestast"
rust-version = "1.65"

[lib]
proc-macro = true


[dependencies]
pestast_gen = { path = "../generate" }
syn = "2.0"


[dev-dependencies]
pest = "2.7.7"
pest_derive = { version = "2.7.7", features = ["grammar-extras"] }
pestast = { path = "../pestast" }
