[package]
name = "simple_example"
version = "0.1.0"
edition = "2021"
authors = ["Marc Fischer <marc.fischer@isw.uni-stuttgart.de>"]
license = "MIT OR Apache-2.0"
# description = "AST representation used by Serde derive macros. Unstable."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
pest = "2.7.6"
pest_derive = { version = "2.7.6", features = ["grammar-extras"] }
pestast = { path = "../pestast" }

[dev-dependencies]
criterion = "0.5"


[[bench]]
name = "basic_benchmark"
harness = false

[lib]
name = "simple_example_lib"
path = "src/lib.rs"
bench = false

[[bin]]
name = "simple_example_bin"
path = "src/main.rs"
bench = false
