[package]
name = "simple_example"
description = "pestast's exaples"
version = "0.2.0"
edition = "2021"
authors = ["Marc Fischer <marcfir@proton.me>"]
license = "MIT OR Apache-2.0"
keywords = ["pest", "parser", "ast", "grammar"]
categories = ["parsing"]
repository = "https://github.com/marcfir/pestast"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
pest = "2.7.7"
pest_derive = { version = "2.7.7", features = ["grammar-extras"] }
pestast = { path = "../pestast" }

[dev-dependencies]
criterion = "0.5"


[[bench]]
name = "basic_benchmark"
harness = false

[lib]
name = "simple_example_lib"
path = "src/lib.rs"
bench = false

[[bin]]
name = "simple_example_bin"
path = "src/main.rs"
bench = false
