[package]
name = "pestast"
version = "0.1.0"
edition = "2021"
authors = ["Marc Fischer <marc.fischer@isw.uni-stuttgart.de>"]
license = "MIT OR Apache-2.0"
description = "Convert a pest grammar into a typed AST"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
pest = "2.7.6"
pestast_derive = { path = "../derive" }

[dev-dependencies]
pest_derive = { version = "2.7.6", features = ["grammar-extras"] }
